# veriroot

./: .gitignore  .~lock.instructions.xlsx#  CMakeLists.txt  a  generate-rasm-symlink  instructions.xlsx  run  run.sh  veriroot.mpf  vsim.wlf  waveform.vcd  wlft3b8imc  ~$instructions.xlsx
.github/workflows/: tests.yml
bootloader/: data.hex  text.hex
include/: alu.svh  ctrl.svh  defs.svh  dmem.svh
obj_dir/: VTop  VTop.cpp  VTop.h  VTop.mk  VTop__ALL.cpp  VTop__ALL.d  VTop__ConstPool_0.cpp  VTop__Syms.cpp  VTop__Syms.h  VTop__Trace__0.cpp  VTop__Trace__0__Slow.cpp  VTop___024root.h  VTop___024root__DepSet_h0d2e5939__0.cpp  VTop___024root__DepSet_h0d2e5939__0__Slow.cpp  VTop___024root__DepSet_hc590b6dd__0.cpp  VTop___024unit__DepSet_h1b4533a7__0__Slow.cpp  VTop___024unit__Slow.cpp  VTop__ver.d  VTop_classes.mk  tb_system.d
rtl/: top.sv
rtl/core/: alu.sv  control_path.sv  core.sv  counter_register.v  data_path.sv  register_file.v
rtl/peripherals/: ram.sv  rom.sv  rom.v
tests/: README.md  SystemTB.h  system_tb.sv  tb_system.cpp  test_runner.cpp
tests/integration_tests/: core_tb.sv  dp_tb.sv  ip_im_tb.sv
tests/runner/: ITest.h  TestBase.h  TestRegister.h  TestRegistry.h
tests/unit_tests/: AluTB.h  alu_tb.sv  cr_tb.v  ram_tb.sv  rf_tb.v  rom_tb.sv  rom_tb.v
work/: _info  _lib.qdb  _lib1_1.qdb  _lib1_1.qpg  _lib1_1.qtl  _lib1_5.qdb  _lib1_5.qpg  _lib1_5.qtl  _lib1_6.qdb  _lib1_6.qpg  _lib1_6.qtl
